fix navbar link size + button text letter spacing

--- a/components/styles/Button.module.css
+++ b/components/styles/Button.module.css
@@ -71,6 +71,7 @@ button.buttonSax:active::before {
 
     font-size: 0.93em;
     font-weight: 740;
+    letter-spacing: -0.025em;
     color: var(--text);
     text-transform: uppercase;
     font-family: inherit;
@@ -84,6 +85,7 @@ button.buttonSax:active::before {
     .buttonSax {
         font-size: 0.9em;
         font-weight: 550;
+        letter-spacing: -0.025em;
         /* Adjust the font size for smaller screens */
         padding: 0.90em 1.1em;
         /* Adjust padding for smaller screens */
